--- a/journal/templates/journal/base.html
+++ b/journal/templates/journal/base.html
@@ -17,6 +17,7 @@
         <div class="page-header">
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-pencil"></span></a>
             {% endif %}
             <h1><a href="{% url 'post_list' %}">My Journal</a></h1>
         </div>
