--- a/journal/templates/journal/post_detail.html
+++ b/journal/templates/journal/post_detail.html
@@ -1,15 +1,16 @@
 {% extends 'journal/base.html' %}
+
 {% block content %}
-    <div class="post">        
-        <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+    <div class="post">
         {% if post.published_date %}
-        <div class="date">
-            {{ post.published_date }}
-        </div>
+            <div class="date">{{ post.published_date|date:'d M Y' }}</div>
+        {% elif user.is_authenticated and user == post.author %}
+            <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
         {% endif %}
-        {% if user.is_authenticated %}
+        {% if user.is_authenticated and user == post.author %}
             <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         {% endif %}
+        <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endblock %}
