--- a/journal/templates/journal/post_list.html
+++ b/journal/templates/journal/post_list.html
@@ -1,10 +1,9 @@
 {% extends 'journal/base.html' %}
+
 {% block content %}
     {% for post in posts %}
         <div class="post">
-            <div class="date">
-                {{ post.published_date }}
-            </div>
+            <div class="date">{{ post.published_date|date:'d M Y' }}</div>
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
